<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mreverter.workshopexample.ComponentsActivity"
    tools:showIn="@layout/activity_components"
    android:orientation="vertical">
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/payment_methods_component_button_text"
        android:onClick="startPaymentMethodsComponent"
        android:padding="5dp"
        style="@style/mpsdk_button_normal"/>
    <Button
        android:id="@+id/issuersButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mpsdk_button_height"
        android:layout_marginBottom="10dp"
        android:text="@string/issuers_component_button_text"
        android:onClick="startIssuersComponent"
        android:enabled="false"
        style="@style/mpsdk_button_normal"/>
    <Button
        android:id="@+id/installmentsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mpsdk_button_height"
        android:layout_marginBottom="10dp"
        android:text="@string/installments_component_button_text"
        android:onClick="startInstallmentsComponent"
        android:enabled="false"
        style="@style/mpsdk_button_normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mpsdk_warm_grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/mpsdk_button_height"
        android:layout_marginBottom="10dp"
        android:text="@string/card_without_installments_component_button_text"
        android:onClick="startCardWithoutInstallmentsComponent"
        style="@style/mpsdk_button_normal"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/mpsdk_button_height"
        android:layout_marginBottom="10dp"
        android:text="@string/card_with_installments_component_button_text"
        android:onClick="startCardWithInstallmentsComponent"
        style="@style/mpsdk_button_normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reiniciar"
        android:textSize="15dp"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/mpsdk_color_link"
        android:onClick="restartExample"/>

</LinearLayout>
